--- a/package.json
+++ b/package.json
@@ -1,37 +1,64 @@
 {
-  "name": "sk",
+  "name": "projectaction",
   "version": "1.0.0",
-  "description": "",
+  "description": "基于BFF层的通用前后的架构",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:dev": "cross-env NODE_ENV=development&& webpack --progress --watch",
+    "build:prod": "set NODE_ENV=production&& webpack && gulp"
   },
-  "keywords": [],
-  "author": "Shun-Kai",
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
+  "dependencies": {
+    "awilix": "^3.0.3",
+    "awilix-koa": "^2.1.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "co": "^4.6.0",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
+    "eslint": "^4.15.0",
+    "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "gulp": "^3.9.1",
+    "file-loader": "^1.1.6",
     "gulp-babel": "^7.0.0",
     "html-webpack-plugin": "^2.30.1",
-    "koa-convert": "^1.2.0",
+    "imagemin-webpack-plugin": "^1.5.2",
+    "koa": "^2.4.1",
     "koa-simple-router": "^0.2.0",
     "koa-static": "^4.0.2",
     "koa-swig": "^2.2.1",
-    "less-loader": "^4.0.5",
+    "lodash": "^4.17.4",
+    "log4js": "^2.5.2",
+    "mocha": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.0.10",
+    "precss": "^2.0.0",
+    "request-promise": "^4.2.2",
     "style-loader": "^0.19.1",
+    "stylelint": "^8.4.0",
+    "stylelint-config-standard": "^18.0.0",
+    "stylelint-webpack-plugin": "^0.9.0",
+    "supertest": "^3.0.0",
     "webpack": "^3.10.0",
     "webpack-livereload-plugin": "^1.0.0"
   },
-  "dependencies": {
-    "koa": "^2.4.1",
-    "log4js": "^2.4.1"
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "cssnano": "^3.10.0",
+    "gulp": "^3.9.1",
+    "gulp-rollup": "^2.15.0",
+    "gulp-watch": "^5.0.0",
+    "happypack": "^4.0.0",
+    "mocha": "^4.1.0",
+    "postcss-cssnext": "^3.1.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "uirecorder": "^2.5.36",
+    "webpack": "^3.10.0"
   }
 }
